--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "For Girls team",
+  "name": "Create by frontend developer",
   "icons": [
     {
       "src": "favicon.ico",
